components/minio/examples/yaml-legacy/single.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio
  name: minio
  namespace: minio
spec:
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: pgsty/silo
          command:
            - /bin/bash
            - -c
          args:
            - minio server /data --console-address :9090
          volumeMounts:
            - mountPath: /data
              name: data
          ports:
            - containerPort: 9090
              name: console
            - containerPort: 9000
              name: api
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: console
      port: 9090
      protocol: TCP
      targetPort: 9090
    - name: api
      port: 9000
      protocol: TCP
      targetPort: 9000
