components/minio/examples/yaml-legacy/http_route.yaml
# HTTP -> HTTPS
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-ui-redirect-route
  namespace: minio
spec:
  parentRefs:
    - name: minio-gateway
      sectionName: http
  hostnames:
    - "minio-ui.app.com"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
---
# HTTPS 业务路由 (443 -> 9090)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-ui-https-route
  namespace: minio
spec:
  parentRefs:
    - name: minio-gateway
      sectionName: https
  hostnames:
    - "minio-ui.app.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio-service
          port: 9090
---
# API 业务路由 (9000 -> 9000)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-api-http-route
  namespace: minio
spec:
  parentRefs:
    - name: minio-gateway
      sectionName: http-api
  hostnames:
    - "minio-api.app.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio-service
          port: 9000
